# ECE609-Final-Project

./: Lab 2 code  README.md  obstacle_avoidance_results.csv
.devcontainer/: Dockerfile
catkin_ws/src/lab2/: Lab2_NOTES.txt
catkin_ws/src/lab2/launch/: lab2.launch
catkin_ws/src/lab2/maps/: task2map.pgm  task2map.yaml
catkin_ws/src/lab2/rviz/: rviz_configuration.rviz
catkin_ws/src/lab2/scripts/: astar_planner.py  path_controller.py
catkin_ws/src/lab3/: Lab 3_NOTES
catkin_ws/src/lab3/config/: controllers.yaml  joint_limits.yaml
catkin_ws/src/lab3/launch/: lab3.launch  lab3_controllers.launch
catkin_ws/src/lab3/scripts/: inv_kinematics.py  motion_planning.py  plotting.py
catkin_ws/src/lab4/obstacle_avoidance/: CMakeLists.txt  HOWTORUN.txt  package.xml
catkin_ws/src/lab4/obstacle_avoidance/config/: params.yaml  rviz_config.rviz
catkin_ws/src/lab4/obstacle_avoidance/launch/: baseline.launch  potential_field.launch
catkin_ws/src/lab4/obstacle_avoidance/msg/: Obstacle.msg  ObstacleArray.msg
catkin_ws/src/lab4/obstacle_avoidance/src/: baseline_planner.py  metrics_recorder.py  obstacle_sensor.py  obstacle_spawner.py  potential_field_planner.py
catkin_ws/src/lab4/obstacle_avoidance/worlds/: warehouse.world
