<?xml version="1.0"?>
<package format="2">
  <name>obstacle_avoidance</name>
  <version>0.1.0</version>
  <description>Adaptive path replanning with dynamic obstacle avoidance (ECE609)</description>
  <maintainer email="jmcdonald@example.com">Jack McDonald</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>

<exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
</package>
